--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,10 @@
             "name": "browser-util",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "program": "browser-util.py",
             "console": "integratedTerminal",
             "justMyCode": false,
+            "cwd": "${workspaceFolder}",
             "args": ["-test1 test1 -test2 -test3 abcd"]
         },
         //"args": ["-test1", "test1", "-test2", "-test3", "abcd"]
